@@ -46,6 +46,13 @@ func UseElasticAgentPackaging() {
 	MustUsePackaging("elastic_beat_agent_binaries", packageSpecFile)
 }
 
+// UseElasticAgentDemoPackaging configures the package target to build packages for
+// an Elastic Agent demo purposes.
+func UseElasticAgentDemoPackaging() {
+	// Prepare binaries so they can be packed into agent
+	MustUsePackaging("elastic_beat_agent_demo_binaries", packageSpecFile)
+}
+
 // UseElasticBeatPackaging configures the package target to build packages for
 // an Elastic Beat. This means it will generate two sets of packages -- one
 // that is purely OSS under Apache 2.0 and one that is licensed under the
